# discord-rs

./: .gitignore  .prettierrc  CHANGELOG.md  COPYRIGHT  Cargo.toml  LICENSE  README.md
.VSCodeCounter/2024-04-27_14-20-14/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/ISSUE_TEMPLATE/: api_mismatch_issue.md  bug_report.md  documentation_issue.md  feature_request.md  performance_improvement.md
examples/: create-client.md  create_client.rs
src/: error.rs  lib.rs  main.rs  test.rs
src/builders/slash_command/: mod.rs
src/cache/: mod.rs
src/cache/managers/: mod.rs
src/cache/managers/channel/: mod.rs  types.rs
src/cache/managers/client/: mod.rs
src/cache/managers/guild/: mod.rs  types.rs
src/client/: builder.rs  client.rs  enums.rs  event_handler.rs  mod.rs  types.rs
src/client/event_handler/: mod.rs
src/gateway/: enums.rs  mod.rs  types.rs
src/gateway/socket/: mod.rs
src/http/: mod.rs
src/managers/cache/: mod.rs
src/managers/channel/: mod.rs  types.rs
src/managers/client/: mod.rs
src/managers/guild/: mod.rs
src/models/: mod.rs
src/models/application/: types.rs
src/models/application_command/: mod.rs  types.rs
src/models/attachment/: types.rs
src/models/channel/: enums.rs  mod.rs  types.rs
src/models/emoji/: types.rs
src/models/guild/: types.rs
src/models/member/: types.rs
src/models/message/: enums.rs  mod.rs  types.rs
src/models/message_payload/: types.rs
src/models/nonce/: mod.rs
src/models/presence/: types.rs
src/models/reaction/: types.rs
src/models/snowflake/: mod.rs
src/models/sticker/: types.rs
src/models/user/: mod.rs  types.rs
src/models/webhook/: mod.rs  types.rs
src/structs/application/: types.rs
src/structs/application_command/: mod.rs  types.rs
src/structs/channel/: deserializers.rs  impls.rs  mod.rs  types.rs
src/structs/client/: enums.rs  mod.rs  structs.rs  traits.rs
src/structs/locale/: mod.rs
src/structs/message/: enums.rs  mod.rs  structs.rs
src/structs/reaction/: types.rs
src/structs/snowflake/: mod.rs
src/util/broadcast/: mod.rs
src/util/env/: mod.rs
src/util/rest/: mod.rs
src/util/socket/: mod.rs
src/util/threadpool/: mod.rs
tests/: channel.rs  client.rs  message.rs
