[package]
name = "discord-rs"
version = "0.2.0"
description = "A rust library for interacting with the Discord API in a blazingly fast way"

authors = ["Brian T. <bptiburcio@gmail.com>"]
categories = ["api-bindings"]
documentation = "https://docs.rs/discord-rs"
keywords = ["discord", "chat", "bot", "api"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/BrianTib/discord-rs"

edition = "2021"
rust-version = "1.75.0"

include = [
    "**/*.rs",
    "Cargo.toml",
]

exclude = [
    ".ignore/*",
    "assets/*",
    "tests/*",
    "examples/*",
    "src/examples/*",
    "target/*"
]

[lib]
doctest = false

[features]
webhooks = []

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
native-tls = "0.2.12"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["unbounded_depth"] }
serde_repr = "0.1.19"
serde_with = "3.8.1"
serde_stacker = "0.1.11"
tungstenite = { version = "0.23.0", features = ["native-tls"] }
url = "2.5.0"