[package]
name = "discord-rs"
version = "0.2.0"
description = "A blazingly fast rust library for interacting with the Discord API"

authors = ["Brian T. <bptiburcio@gmail.com>"]
categories = ["api-bindings"]
documentation = "https://docs.rs/discord-rs"
keywords = ["discord", "chat", "bot", "api"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/BrianTib/discord-rs"

edition = "2021"
rust-version = "1.79.0"

include = [
    "src/**",
    "Cargo.toml",
    "COPYRIGHT",
    "LICENSE"
]

[lib]
doctest = false

[features]
webhooks = []

[dependencies]
chrono = "0.4.38"
native-tls = "0.2.12"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["unbounded_depth"] }
serde_repr = "0.1.19"
serde_with = "3.9.0"
serde_stacker = "0.1.11"
tungstenite = { version = "0.23.0", features = ["native-tls"] }
url = "2.5.2"

[dev-dependencies]
dotenv = "0.15.0"